--- a/src/app/product-description/product-description.component.css
+++ b/src/app/product-description/product-description.component.css
@@ -1,2 +1,2 @@
-p{font-size: 16px;font-family: Arial, Helvetica, sans-serif;font-weight: normal}
+p{font-size: 16px;font-family: Helvetica,Arial , sans-serif;font-weight: normal}
 img{width: 100%}
